<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizzing Bricks</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- Login -->
    <string name="login_header">Login</string>
    <string name="login_email_text_hint">Email or username</string>
    <string name="login_password_text_hint">Password</string>
    <string name="login_submit_button">Login</string>
    <!-- First Start -->
    <string name="login_user_button">Sign In</string>
    <string name="register_user_button">Create Account</string>
    <!-- Register User -->
    <string name="register_user_header">Create user</string>
    <string name="register_user_submit_button">Create user</string>
    <string name="register_user_email__edit_header">Email</string>
    <string name="register_user_email_text_hint">Like example@mail.com</string>
    <string name="register_user_username_edit_header">Username</string>
    <string name="register_user_username_text_hint">Do not be afraid</string>
    <string name="register_user_password_edit_header">Password</string>
    <string name="register_user_password_text_hint">Make it strong!</string>
    <string name="register_user_rewrite_password_edit_header">Rewrite Password</string>
    <string name="register_user_rewrite_password_text_hint">And again</string>
    <!-- Answer Question -->
    <string name="correct_answer">The answer you have given is correct</string>
    <string name="incorrect_answer">The answer you have given is incorrect</string>
    <string name="unknow_server_answer">Unknown answer from server</string>
    <string name="question_time_exceded">Question time exceded</string>
    <string name="counter_start">Seconds remaining: 10</string>
    <!-- Lobby -->
    <string name="title_activity_lobby_owner">LobbyOwnerActivity</string>
    <string name="title_activity_lobby_slave">LobbySlaveActivity</string>
    <string name="title_activity_lobby_invite_friend">LobbyInviteFriendActivity</string>
    <!-- Other -->
    <string name="title_activity_game_board">GameBoardActivity</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="cancel">Cancel</string>
    <string name="Question_Prompt">Question Prompt</string>
    <string name="menu">Menu</string>
    <string name="friends_list">Friends List</string>
    <string name="your_games">Your Games</string>
    <string name="create_game">Create Game</string>
    <string name="logout">Logout</string>

</resources>
