
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >
    
    <TextView
        android:id="@+id/register_user_text_header"
        style="@style/textHeader"
        android:layout_alignParentTop="true"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user_header" 
        />
    
    
    <TextView
        android:id="@+id/error_message_text"
        style="@style/inputBoxScreenWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_user_text_header"
        android:textColor="@color/warning_red"
        android:textSize="16sp" 
        android:text=""/>
    
    
    <TextView
        android:id="@+id/register_user_email_edit_header"
        android:layout_below="@id/error_message_text"
        android:text="@string/register_user_email__edit_header"
        style="@style/inputBoxHeader" 
    	/>
    <EditText 
        android:id="@+id/register_user_email_edit"
        android:layout_below="@id/register_user_email_edit_header"
        style="@style/inputBoxScreenWidth"
        android:hint="@string/register_user_email_text_hint"
        android:inputType="textNoSuggestions|textVisiblePassword"
        />
    
    <TextView
        android:id="@+id/register_user_username_edit_header"
        android:layout_below="@id/register_user_email_edit"
        android:text="@string/register_user_username_edit_header"
        style="@style/inputBoxHeader" 
    	/>
    <EditText 
        android:id="@+id/register_user_username_edit"
        android:layout_below="@id/register_user_username_edit_header"
        style="@style/inputBoxScreenWidth"
        android:hint="@string/register_user_username_text_hint"
        android:inputType="textNoSuggestions|textVisiblePassword"
        />
    
    
    <TextView
        android:id="@+id/register_user_password_edit_header"
        android:layout_below="@id/register_user_username_edit"
        android:text="@string/register_user_password_edit_header"
        style="@style/inputBoxHeader" 
    	/>
    <EditText 
        android:id="@+id/register_user_password_edit"
        android:layout_below="@id/register_user_password_edit_header"
        style="@style/inputBoxScreenWidth"
        android:hint="@string/register_user_password_text_hint"
        android:inputType="textPassword"
        />
    
    
    <TextView
        android:id="@+id/register_user_rewrite_password_edit_header"
        android:layout_below="@id/register_user_password_edit"
        android:text="@string/register_user_rewrite_password_edit_header"
        style="@style/inputBoxHeader" 
    	/>
    <EditText 
        android:id="@+id/register_user_rewrite_password_edit"
        android:layout_below="@id/register_user_rewrite_password_edit_header"
        style="@style/inputBoxScreenWidth"
        android:hint="@string/register_user_rewrite_password_text_hint"
        android:inputType="textPassword"
        />
    
    
    <Button
        android:id="@+id/register_user_submit"
        android:gravity="center"
        style="@style/fillScreenWidth"
        android:layout_below="@id/register_user_rewrite_password_edit"
        android:onClick="sendRegisterUserInfo"
        android:padding="16dp"
        android:text="@string/register_user_submit_button" 
        />

</RelativeLayout>
    
</ScrollView>